overflow fix on mobile

--- a/catalog/view/theme/weye/stylesheet/stylesheet.scss
+++ b/catalog/view/theme/weye/stylesheet/stylesheet.scss
@@ -20,7 +20,7 @@ $thin: 'Gotham Narrow Thin';
 $purple_header: #3f0a73;
 $lightpurple: #ee05f2;
 
-body{
+body, body >div{
 	overflow-x: hidden;
 }
 
